--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/_trainingCoursesJS.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/_trainingCoursesJS.cshtml
@@ -9,7 +9,7 @@
         </p>
         <div class="hide-nojs">
             <div class="form-group inline clearfix">
-                <label data-target="training-history-panel" for="training-history-yes" class="block-label" data-bind="css: {selected: showTrainingCourses()}">
+                <label data-target="training-history-panel" for="training-history-yes" class="block-label selection-button-radio" data-bind="css: {selected: showTrainingCourses()}">
                     @Html.RadioButtonFor(m => m.Candidate.HasTrainingCourses, true, new { id = "training-history-yes", data_bind = "attr:{'checked': hasTrainingCourses() }", aria_controls = "training-history-panel", aria_expanded = "false", aria_labelledby = "trainingCoursesQuestion" })
                     Yes
                 </label>
