--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
@@ -145,14 +145,14 @@
 
     <div id="content" role="main" tabindex="-1">
         <main id="main">
-            <div class="sfa-navigation-wrapper">
-                <div class="grid-row">
-                    <div class="column-one-half sfa-navigation">
-                        @Html.Partial("_LoginPartial")
-                    </div>
-                </div>
+    <div class="sfa-navigation-wrapper">
+        <div class="grid-row">
+            <div class="column-one-half sfa-navigation">
+                @Html.Partial("_LoginPartial")
             </div>
-    
+        </div>
+    </div>
+
                 @{
                     var controller = ViewContext.Controller as CandidateControllerBase;
 
@@ -164,45 +164,49 @@
                         var errorMessage = controller.UserData.Pop(UserMessageConstants.ErrorMessage);
                         if (errorMessage != null)
                         {
-                            <div role="alert" class="panel-danger">
-                                <p id="ErrorMessageText">@Html.Raw(errorMessage)</p>
-                            </div>
-                        }
-                        if (warningMessage != null)
-                        {
-                            <div class="grid-row">
-                                <div class="column-two-thirds">
-                                    <div class="warning-summary" role="group" aria-labelledby="WarningMessageText" tabindex="-1">
-                                        <p id="WarningMessageText">@Html.Raw(warningMessage)</p>
+                                <div class="grid-row">
+                                    <div class="column-two-thirds">
+                                        <div class='error-summary' role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+                                            <p id="ErrorMessageText">@Html.Raw(errorMessage)</p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        }
-                        if (successMessage != null)
-                        {
-                            <div class="grid-row">
-                                <div class="column-two-thirds">
-                                    <div class="success-summary" role="group" aria-labelledby="SuccessMessageText" tabindex="-1">
-                                        <p id="SuccessMessageText">@Html.Raw(successMessage)</p>
+                                }
+                                if (warningMessage != null)
+                                {
+                                <div class="grid-row">
+                                    <div class="column-two-thirds">
+                                        <div class="warning-summary" role="group" aria-labelledby="WarningMessageText" tabindex="-1">
+                                            <p id="WarningMessageText">@Html.Raw(warningMessage)</p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        }
-                        if (infoMessage != null)
-                        {
-                            <div class="grid-row">
-                                <div class="column-two-thirds">
-                                    <div class="info-summary" role="group" aria-labelledby="InfoMessageText" tabindex="-1">
-                                        <p id="InfoMessageText">@Html.Raw(infoMessage)</p>
+                                }
+                                if (successMessage != null)
+                                {
+                                <div class="grid-row">
+                                    <div class="column-two-thirds">
+                                        <div class="success-summary" role="group" aria-labelledby="SuccessMessageText" tabindex="-1">
+                                            <p id="SuccessMessageText">@Html.Raw(successMessage)</p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        }
-                    }
-                }
+                                }
+                                if (infoMessage != null)
+                                {
+                                <div class="grid-row">
+                                    <div class="column-two-thirds">
+                                        <div class="info-summary" role="group" aria-labelledby="InfoMessageText" tabindex="-1">
+                                            <p id="InfoMessageText">@Html.Raw(infoMessage)</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                }
+                                }
+                                }
 
 
-                @RenderBody()
+                                @RenderBody()
 </main>
 
         @if (ViewBag.EnableWebTrends == true)
