--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
@@ -17,7 +17,8 @@ $path: "/Content/_assets/img/";
 
 @import "_govuk-elements";
 
-@import "_form-warnings";
+@import "_sfa-form-warnings";
 @import "_forms";
 
-@import "_sfa-banners.scss"
+@import "_sfa-banners.scss";
+@import "_sfa-notifications.scss";
