--- a/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/styles.css
+++ b/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/styles.css
@@ -1455,14 +1455,14 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   display: block;
   clear: both; }
 
-#content, sfa-maintenance-banner p {
+#content, .sfa-maintenance-banner p {
   max-width: 960px;
   margin: 0 15px; }
   @media (min-width: 641px) {
-    #content, sfa-maintenance-banner p {
+    #content, .sfa-maintenance-banner p {
       margin: 0 30px; } }
   @media (min-width: 1020px) {
-    #content, sfa-maintenance-banner p {
+    #content, .sfa-maintenance-banner p {
       margin: 0 auto; } }
 
 .grid-row {
@@ -1483,14 +1483,14 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   display: block;
   clear: both; }
 
-#content, sfa-maintenance-banner p {
+#content, .sfa-maintenance-banner p {
   max-width: 960px;
   margin: 0 15px; }
   @media (min-width: 641px) {
-    #content, sfa-maintenance-banner p {
+    #content, .sfa-maintenance-banner p {
       margin: 0 30px; } }
   @media (min-width: 1020px) {
-    #content, sfa-maintenance-banner p {
+    #content, .sfa-maintenance-banner p {
       margin: 0 auto; } }
 
 .grid-row {
@@ -3039,11 +3039,6 @@ input[type=number] {
     display: list-item;
     display: revert; } }
 
-.notifications .error-summary, .notifications .warning-summary, .notifications .success-summary, .notifications .info-summary {
-  margin-bottom: 0px !important; }
-  .notifications .error-summary:last-child, .notifications .warning-summary:last-child, .notifications .success-summary:last-child, .notifications .info-summary:last-child {
-    margin-bottom: 100px; }
-
 .warning {
   margin-right: 15px;
   border-left: 4px solid #f47738;
@@ -3107,121 +3102,6 @@ input[type=number] {
     font-weight: bold;
     text-decoration: underline; }
 
-.info {
-  margin-right: 15px;
-  border-left: 4px solid #2b8cc4;
-  padding-left: 10px; }
-  .info > .form-control {
-    border: 4px solid #2b8cc4; }
-  @media (min-width: 641px) {
-    .info {
-      border-left: 5px solid #2b8cc4;
-      padding-left: 15px; } }
-
-.info-message {
-  font-family: "nta", Arial, sans-serif;
-  font-weight: 700;
-  text-transform: none;
-  font-size: 16px;
-  line-height: 1.25;
-  color: #2b8cc4;
-  display: block;
-  clear: both;
-  margin: 0;
-  padding: 2px 0; }
-  @media (min-width: 641px) {
-    .info-message {
-      font-size: 19px;
-      line-height: 1.31579; } }
-
-.form-label-bold .info-message,
-.form-label-bold .info-message {
-  padding-top: 4px;
-  padding-bottom: 0; }
-
-.info-summary {
-  border: 4px solid #2b8cc4;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  padding: 15px 10px; }
-  @media (min-width: 641px) {
-    .info-summary {
-      border: 5px solid #2b8cc4;
-      margin-top: 30px;
-      margin-bottom: 30px;
-      padding: 20px 15px 15px; } }
-  .info-summary:focus {
-    outline: 3px solid #ffbf47; }
-  .info-summary .info-summary-heading {
-    margin-top: 0; }
-  .info-summary p {
-    margin-bottom: 10px; }
-  .info-summary .info-summary-list {
-    padding-left: 0; }
-    @media (min-width: 641px) {
-      .info-summary .info-summary-list li {
-        margin-bottom: 5px; } }
-    .info-summary .info-summary-list a {
-      color: #2b8cc4;
-      font-weight: bold;
-      text-decoration: underline; }
-  .info-summary .info-dismiss {
-    color: #2b8cc4;
-    font-weight: bold;
-    text-decoration: underline; }
-
-.success-message {
-  font-family: "nta", Arial, sans-serif;
-  font-weight: 700;
-  text-transform: none;
-  font-size: 16px;
-  line-height: 1.25;
-  color: #28a197;
-  display: block;
-  clear: both;
-  margin: 0;
-  padding: 2px 0; }
-  @media (min-width: 641px) {
-    .success-message {
-      font-size: 19px;
-      line-height: 1.31579; } }
-
-.form-label-bold .success-message,
-.form-label-bold .success-message {
-  padding-top: 4px;
-  padding-bottom: 0; }
-
-.success-summary {
-  border: 4px solid #28a197;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  padding: 15px 10px; }
-  @media (min-width: 641px) {
-    .success-summary {
-      border: 5px solid #28a197;
-      margin-top: 30px;
-      margin-bottom: 30px;
-      padding: 20px 15px 15px; } }
-  .success-summary:focus {
-    outline: 3px solid #ffbf47; }
-  .success-summary .success-summary-heading {
-    margin-top: 0; }
-  .success-summary p {
-    margin-bottom: 10px; }
-  .success-summary .success-summary-list {
-    padding-left: 0; }
-    @media (min-width: 641px) {
-      .success-summary .success-summary-list li {
-        margin-bottom: 5px; } }
-    .success-summary .success-summary-list a {
-      color: #28a197;
-      font-weight: bold;
-      text-decoration: underline; }
-  .success-summary .success-dismiss {
-    color: #28a197;
-    font-weight: bold;
-    text-decoration: underline; }
-
 .form-control-4-4 {
   width: 100%; }
 
@@ -3236,12 +3116,12 @@ input[type=number] {
   display: none;
   /* shown with JS, always on for non-JS */ }
 
-sfa-maintenance-banner {
+.sfa-maintenance-banner {
   width: 100%;
   background-color: #fff2d3;
   padding-top: 10px;
   padding-bottom: 10px; }
-  sfa-maintenance-banner p {
+  .sfa-maintenance-banner p {
     font-family: "nta", Arial, sans-serif;
     font-weight: 400;
     text-transform: none;
@@ -3250,10 +3130,67 @@ sfa-maintenance-banner {
     margin-top: 0;
     margin-bottom: 0; }
     @media (min-width: 641px) {
-      sfa-maintenance-banner p {
+      .sfa-maintenance-banner p {
         font-size: 16px;
         line-height: 1.25; } }
 
 /*Additions to the cloned styles above */
 .sfa-maintenance-banner .sfa-maintenance-close {
   font-weight: bold; }
+
+.notifications .error-summary, .notifications .warning-summary, .notifications .success-summary, .notifications .info-summary {
+  margin-bottom: 0px !important; }
+  .notifications .error-summary:last-child, .notifications .warning-summary:last-child, .notifications .success-summary:last-child, .notifications .info-summary:last-child {
+    margin-bottom: 100px; }
+
+.info-summary, .success-summary {
+  border-width: 4px;
+  border-style: solid;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 15px 10px; }
+  @media (min-width: 641px) {
+    .info-summary, .success-summary {
+      border-width: 5px;
+      border-style: solid;
+      margin-top: 30px;
+      margin-bottom: 30px;
+      padding: 20px 15px 15px; } }
+  .info-summary:focus, .success-summary:focus {
+    outline: 3px solid #ffbf47; }
+  .info-summary p, .success-summary p {
+    margin-bottom: 10px; }
+  .info-summary-heading, .success-summary-heading {
+    margin-top: 0; }
+  .info-summary-list, .success-summary-list {
+    padding-left: 0; }
+    @media (min-width: 641px) {
+      .info-summary-list li, .success-summary-list li {
+        margin-bottom: 5px; } }
+    .info-summary-list a, .success-summary-list a {
+      font-weight: bold;
+      text-decoration: underline; }
+
+.info-dismiss, .success-dismiss {
+  font-weight: bold;
+  text-decoration: underline; }
+
+.info-summary {
+  border-color: #2b8cc4; }
+  @media (min-width: 641px) {
+    .info-summary {
+      border-color: #2b8cc4; } }
+  .info-summary .info-summary-list a {
+    color: #2b8cc4; }
+  .info-summary .info-dismiss {
+    color: #2b8cc4; }
+
+.info-summary {
+  border-color: #28a197; }
+  @media (min-width: 641px) {
+    .info-summary {
+      border-color: #28a197; } }
+  .info-summary .info-summary-list a {
+    color: #28a197; }
+  .info-summary .info-dismiss {
+    color: #28a197; }
