Fixes to the employer confirmation page

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
@@ -11,6 +11,8 @@
             Model.VacancyLocationType == VacancyLocationType.SpecificLocation ? "Save and return to Preview" : "Save and continue";
 }
 
+@Html.Partial("ValidationSummary")
+
 <div class="grid-row">
     <div class="column-two-thirds">
         <h1 class="heading-xlarge">
