Fix issue with notification scss, Add inline class to button containers, add sfa-secondary-button class to secondary buttons

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/UpdateEmailAddress.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/UpdateEmailAddress.cshtml
@@ -17,8 +17,7 @@
     </div>
 </div>
 <p >
-    To change your email address we'll need to send you a code to verify it's
-    yours.
+    To change your email address we'll need to send you a code to verify it's yours.
 </p>
 @using (Html.BeginRouteForm(RouteNames.UpdateEmail, FormMethod.Post, new { id = "update-email-form", autocomplete = "off" }))
 {
