--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EmployerInformation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EmployerInformation.cshtml
@@ -21,9 +21,9 @@
 {   
     @Html.DisplayFor(m => m, VacancyOwnerRelationshipViewModel.PartialView)
 
-    <div class="column-full">
+    <div class="column-full inline">
         <button class="button" id="confirmEmployer" name="ConfirmEmployer" value="ConfirmEmployer">@saveButtonText</button>
-        @Html.RouteLink("Cancel", ManagementRouteNames.ReviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })
+        @Html.RouteLink("Cancel", ManagementRouteNames.ReviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "button sfa-button-secondary" })
     </div>
 }
 
