--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ConfirmBulkUnsuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ConfirmBulkUnsuccessfulDecision.cshtml
@@ -45,12 +45,12 @@
             controlHtmlAttributes: new {@class = "width-all-3-4", type = "text", size = 12, style = "height: 200px;"},
             labelHtmlAttributes: new {@class = "bold-small"})
         <section>
-            <div class="form-group">
+            <div class="form-group inline">
                 <br/>
                 <button type="submit" class="button" name="SendBulkUnsuccessfulDecisionAction" value="SendBulkUnsuccessfulDecision">
                     Send feedback
                 </button>
-                @Html.RouteLink("Cancel", RecruitmentRouteNames.BulkDeclineCandidates, new RouteValueDictionary {{"VacancyApplicationsSearch.VacancyReferenceNumber", Model.VacancyApplicationsSearch.VacancyReferenceNumber}})
+                @Html.RouteLink("Cancel", RecruitmentRouteNames.BulkDeclineCandidates, new { @class = "button sfa-button-secondary" }, new RouteValueDictionary {{"VacancyApplicationsSearch.VacancyReferenceNumber", Model.VacancyApplicationsSearch.VacancyReferenceNumber}})
             </div>
         </section>
     </div>
