--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ShareApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ShareApplications.cshtml
@@ -141,9 +141,9 @@
         </section>
 
         <section>
-            <div class="form-group">
+            <div class="form-group inline">
                 <button type="submit" class="button">Send</button>
-                @Html.RouteLink("Cancel", RecruitmentRouteNames.VacancyApplications, new { Model.VacancyReferenceNumber })
+                @Html.RouteLink("Cancel", RecruitmentRouteNames.VacancyApplications, new { Model.VacancyReferenceNumber }, new { @class = "button sfa-button-secondary" })
             </div>
         </section>
 
