--- a/src/SFA.Apprenticeships.Web.Recruit/Views/TraineeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/TraineeshipApplication/Review.cshtml
@@ -106,11 +106,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="form-group">
-                    <p class="sfa-medium-bottom-margin">
-                        <button type="submit" class="button" name="Review" value="ReviewSaveAndExit">Save and exit</button>
-                        @Html.RouteLink("Cancel", RecruitmentRouteNames.VacancyApplications, new { Model.Vacancy.VacancyReferenceNumber })
-                    </p>
+                <div class="form-group inline">
+                    <button type="submit" class="button" name="Review" value="ReviewSaveAndExit">Save and exit</button>
+                    @Html.RouteLink("Cancel", RecruitmentRouteNames.VacancyApplications, new { Model.Vacancy.VacancyReferenceNumber }, new { @class = "button sfa-button-secondary" })
                 </div>
             </section>
         }
