--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -19,12 +19,12 @@
         saveButtonValue = "CreateVacancyAndPreview";
     }
 
-    <div class="form-group">
+    <div class="form-group inline">
         <button id="createVacancyButton" type="submit" class="button no-autosave" name="CreateVacancy" value="@saveButtonValue">@saveButtonText</button>
         <button id="createVacancyAndExit" type="submit" class="button sfa-button-secondary no-autosave" name="CreateVacancy" value="CreateVacancyAndExit">Save and exit</button>
         @if (Model.ComeFromPreview)
         {
-            @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new {@class = "no-autosave" })
+            @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new {@class = "no-autosave button sfa-button-secondary" })
         }
     </div>
 }
