--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/TrainingDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/TrainingDetails.cshtml
@@ -18,12 +18,12 @@
         saveButtonValue = "TrainingDetailsAndPreview";
     }
 
-    <div class="form-group">
+    <div class="form-group inline">
         <button id="createVacancyButton" type="submit" class="button no-autosave" name="TrainingDetails" value="@saveButtonValue">@saveButtonText</button>
         <button id="createVacancyAndExit" type="submit" class="button sfa-button-secondary no-autosave" name="TrainingDetails" value="TrainingDetailsAndExit">Save and exit</button>
         @if (Model.ComeFromPreview)
         {
-            @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new {@class = "no-autosave" })
+            @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new {@class = "no-autosave button sfa-button-secondary" })
         }
     </div>
 }
